--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
       <version>${org.springframework-version}</version>
     </dependency>
     <!-- springframework end-->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.14</version>
+    </dependency>
   </dependencies>
 
   <build>
