--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
       <artifactId>lombok</artifactId>
       <version>1.16.14</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.8.10</version>
+    </dependency>
   </dependencies>
 
   <build>
