--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
         <artifactId>javax.inject</artifactId>
         <version>1</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.xuxueli</groupId>
+      <artifactId>xxl-job-core</artifactId>
+      <version>2.2.1</version>
+    </dependency>
   </dependencies>
 
   <build>
