--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,13 @@
     <dependency>
       <groupId>com.xuxueli</groupId>
       <artifactId>xxl-job-core</artifactId>
-      <version>2.2.1</version>
+      <version>2.3.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>1.1.10</version>
     </dependency>
   </dependencies>
 
