--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,12 @@
       <artifactId>druid</artifactId>
       <version>1.1.10</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>11.0.2</version>
+    </dependency>
   </dependencies>
 
   <build>
