--- a/src/main/resources/transaction/druid.properties
+++ b/src/main/resources/transaction/druid.properties
@@ -1,5 +1,5 @@
 druid.username=root
-druid.password=123456
+druid.password=root
 druid.url=jdbc:mysql://localhost:3306/jh?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 druid.driverClassName=com.mysql.jdbc.Driver
 druid.type=com.alibaba.druid.pool.DruidDataSource
